<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="100sp"
            android:paddingBottom="100sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/background_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/stop_alarm"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/stop_the_alarm"
            android:src="@drawable/ic_start_game" />

    </LinearLayout>

</RelativeLayout>