<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/configuration"
        android:icon="@drawable/ic_settings"
        android:title="@string/configuration"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/add_sound"
                android:title="@string/add_a_sound"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/takeof_sound"
                android:enabled="false"
                android:title="@string/take_off_the_sound"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/add_image"
                android:title="@string/add_an_image"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/takeof_image"
                android:enabled="false"
                android:title="@string/take_off_the_image"
                app:showAsAction="ifRoom" />
        </menu>

    </item>

    <item
        android:id="@+id/game"
        android:icon="@drawable/ic_game"
        android:title="@string/configuration_of_the_game"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/all_the_set_up"
                android:title="@string/all_the_set_up"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/category_of_question"
                android:title="@string/choose_category_menu"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/number_of_question"
                android:title="@string/number_of_questions_menu"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/level_of_question"
                android:title="@string/level_of_questions_menu"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

</menu>