<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="check_box">Check the box if you want to activate the game</string>
    <string name="double_zero">00</string>
    <string name="title">Title: </string>
    <string name="tone">Tone: </string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="remove">REMOVE</string>
    <string name="ok">OK</string>
    <string name="look_for_image">Look for your image</string>
...
    <string name="category_sports">Sports</string>
    <string name="choose_category">Choose the category of the questions</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="choose_level">Choose the level of the questions</string>
    <string name="alarm1">alarm1</string>
    <string name="alarm2">alarm2</string>
    <string name="alarm3">alarm3</string>
    <string name="alarm4">alarm4</string>
    <string name="alarm5">alarm5</string>
    <string name="alarm6">alarm6</string>
    <string name="good_job">GOOD ANSWER!! Maybe you are not that sleepy</string>
    <string name="still_sleepy">WRONG ANSWER!! Are you still sleeping (wo)man???</string>
...
    <string name="alarm_already_set_message">You have already set an alarm at this time.</string>
    <string name="zero">0</string>
    <string name="choose_category_menu">Choose the category</string>
    <string name="number_of_questions_menu">Number of questions</string>
    <string name="level_of_questions_menu">Level of the questions</string>
    <string name="configuration_of_the_game">Configuration of the game</string>
    <string name="add">Add</string>
    <string name="take_off_the_image">Take off the image</string>
    <string name="take_off_the_sound">Take off the sound</string>
    <string name="add_an_image">Add an image</string>
    <string name="add_a_sound">Add a sound</string>
    <string name="configuration">Configuration</string>
    <string name="stop_the_alarm">Stop the alarm</string>
...
