...
            android:id="@+id/category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_cinema" />

        <RadioButton
            android:id="@+id/category2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_geography" />

        <RadioButton
            android:id="@+id/category3"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_sports" />
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/rounded_button"
        android:padding="3dp"
        android:text="@string/ok" />
...
